# skein-toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cloudflare/: README.md
devserver/: DevServer.psm1  README.md  benchmark-devserver.ps1  chat-devserver.ps1  check-devserver.ps1  check-queue-batch-state.ps1  devserver-mcp.py  devserver.config.ps1  launch-devserver.ps1  orchestrator_status.py  provision-devserver.sh  rent-devserver.ps1  resume-orchestrator-run.ps1  setup-devserver.ps1  start-overnight-batch.ps1  stop-devserver.ps1  watch-devserver.ps1
devserver/tests/: DevServer.Lifecycle.Tests.ps1  Run-Tests.ps1  TestResults.xml  test_local_mcp_spend_cap.py  (+11 more)
docker/: .env.example
docs/: aider-evaluation.md  chat-ui-landscape.md  goose-evaluation.md  odysseus-convergence.md  odysseus-workspace-preset-template.md  register-scheduled-task.ps1  scheduled-git-push.Tests.ps1  scheduled-git-push.ps1  security-audit-2026-06-12.md  skein-odysseus-merge-research.md  validation-2026-06-13.md
foundation/: design-goals.md
mcp-server/: Dockerfile  cline-completion-watch.ps1  cline_completion_watcher.py  devserver-mcp.py  dispatch_io.py  ledger_io.py  litellm.env.example  litellm_config.yaml  local-mcp.py  register-cline-watcher-task.ps1  requirements.txt  resume-orchestrator-run.ps1  run-cline.ps1  start-litellm.ps1  start-skein.ps1  supervision-watcher-usage.md  supervision-watcher.ps1  supervisor_degraded_mode.py  supervisor_triage.py  toolchain-doctor.ps1
(+73 files in other folders)
